# PensionContribution-TestDesign-Kata

./: README.md  license.txt
cpp/: CMakeLists.txt  README.md
cpp/src/: CMakeLists.txt  DatabaseAccess.h  Employee.cpp  Employee.h  FakePercentages.cpp  FakePercentages.h  JuniorEmployee.h  LeadershipTeam.h  MidLevel.h  PensionContributionCalculation.cpp  PensionContributionCalculation.h  SalaryContributionPercentages.h  SeniorityLevel.h
cpp/test-catch2/: sample_catch.cpp
cpp/test-doctest/: sample_doctest.cpp
cpp/test-gtest/: sample_gtest.cpp
csharp/: PensionContribution-TestDesign-Kata.sln  README.md
csharp/PensionContributionCalculations/: Employee.cs  IDatabaseAccess.cs  ISalaryContributionPercentages.cs  ISeniorityLevel.cs  JuniorEmployee.cs  LeadershipTeam.cs  MidLevel.cs  PensionContributionCalculator.cs  SalaryContributionPercentages.cs
csharp/PensionContributionCalculations.Test/: FakePercentages.cs  GoodUnitTest.cs  PensionContributionCalculationTest.cs  PensionContributionCalculations.Test.csproj
fsharp/: PensionContribution-TestDesign-Kata.sln
fsharp/PensionContributionCalculations/: Employees.fs  Errors.fs  PensionContributionCalculations.fs  PensionContributionCalculations.fsproj
fsharp/PensionContributionCalculations.Facts/: PensionContributionCalculations.Facts.fsproj  PensionContributionCalculations.fs
java/: README.md  pom.xml
python/: README.md  data_access.py  domain.py  pension_calculator.py
python/tests/: fake_contribution_percentages.py
typescript/: README.md  package.json
typescript/src/: DatabaseAccess.ts  Employee.ts  (+6 more)
(+16 files in other folders)
